name:                ip
version:             0.1.0.0
synopsis:            IP and subnetting library for Haskell
-- description:
homepage:            https://github.com/relrod/ip
license:             BSD2
license-file:        LICENSE
author:              Ricky Elrod
maintainer:          ricky@elrod.me
-- copyright:
category:            Network
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  exposed-modules: Network.IP
                 , Network.IP.IPv4
  -- other-modules:
  -- other-extensions:
  build-depends:       attoparsec >= 0.12 && < 0.13
                     , base >= 4 && < 5
                     , bytestring >= 0.10 && < 0.11
                     , parsers >= 0.10 && < 0.13
  hs-source-dirs:      src
  default-language:    Haskell2010